--- a/app/src/main/res/layout/dialog_download.xml
+++ b/app/src/main/res/layout/dialog_download.xml
@@ -11,7 +11,7 @@
         android:id="@+id/progressText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mengunduh & mengekstrak: 0%"
+        android:text="Mengunduh &amp; mengekstrak: 0%"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:layout_marginBottom="16dp"/>
