--- a/app/src/main/res/drawable/circular_progress_glow.xml
+++ b/app/src/main/res/drawable/circular_progress_glow.xml
@@ -1,32 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromDegrees="270"
+    android:pivotX="50%"
+    android:pivotY="50%"
+    android:toDegrees="270">
 
-    <!-- Track -->
-    <item android:id="@android:id/background">
-        <shape android:shape="ring"
-            android:innerRadiusRatio="3"
-            android:thicknessRatio="8"
-            android:useLevel="true">
-            <solid android:color="#404040"/>
-        </shape>
-    </item>
-
-    <!-- Progress dengan gradient glow -->
-    <item android:id="@android:id/progress">
-        <rotate
-            android:fromDegrees="270"
-            android:toDegrees="270">
-            <shape android:shape="ring"
-                android:innerRadiusRatio="3"
-                android:thicknessRatio="8"
-                android:useLevel="true">
-                <gradient
-                    android:startColor="#FFFFBB33"
-                    android:centerColor="#FFFFFF"
-                    android:endColor="#FFFFBB33"
-                    android:angle="0"
-                    android:type="sweep"/>
-            </shape>
-        </rotate>
-    </item>
-</layer-list>
+    <shape
+        android:innerRadiusRatio="3"
+        android:shape="ring"
+        android:thicknessRatio="12"
+        android:useLevel="true">
+        <size
+            android:height="200dp"
+            android:width="200dp"/>
+        <gradient
+            android:endColor="#00BCD4"
+            android:startColor="#80DEEA"
+            android:type="sweep"
+            android:useLevel="true"/>
+    </shape>
+</rotate>
