--- a/app/src/main/res/drawable/rounded_dialog_bg.xml
+++ b/app/src/main/res/drawable/rounded_dialog_bg.xml
@@ -1,6 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FF121212"/>
-    <corners android:radius="16dp"/>
+    <solid android:color="#222831"/>
+    <corners android:radius="24dp"/>
+    <padding
+        android:top="16dp"
+        android:bottom="16dp"
+        android:left="16dp"
+        android:right="16dp"/>
 </shape>
