--- a/app/src/main/assets/assets/style.css
+++ b/app/src/main/assets/assets/style.css
@@ -31,8 +31,8 @@
    Global Body
 =================================*/
 body {
-  width: 1920px; /* fixed size untuk signage */
-  height: 1080px;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   font-family: "Poppins", sans-serif;
   color: var(--blue);
@@ -46,7 +46,7 @@ body {
 .topbar {
   position: absolute;
   inset: 0 0 auto 0; /* top:0, left:0, right:0 */
-  height: 194px;
+  height: 19vh;
   background: url(../assets/gambar/bg_top_06101C_opacity-45.png) center/cover
     no-repeat;
   display: flex;
@@ -60,14 +60,14 @@ body {
 .tgl {
   display: flex;
   flex-direction: column;
-  line-height: 40px;
+  line-height: 3rem;
   font-weight: 600;
-  font-size: 33px;
+  font-size: 2rem;
   letter-spacing: 0.5px;
 }
 .tgl .hijri {
   font-weight: 400;
-  font-size: 33px;
+  font-size: 1.8rem;
   opacity: 0.95;
 }
 
@@ -101,9 +101,8 @@ body {
 /* Jam Digital */
 .clock {
   font-weight: 800;
-  font-size: 76px;
+  font-size: 6rem;
   letter-spacing: 1px;
-  min-width: 220px;
   text-align: right;
 }
 
@@ -129,8 +128,8 @@ body {
 
 /* Icon countdown */
 .c-icon {
-  width: 52px;
-  height: 52px;
+  width: 50%;
+  height: 50%;
   border-radius: 999px;
   background: #fff;
   display: grid;
@@ -138,8 +137,8 @@ body {
   flex: 0 0 52px;
 }
 .c-icon svg {
-  width: 28px;
-  height: 28px;
+  width: 50%;
+  height: 50%;
   fill: var(--blue);
   animation: pulse 1s infinite;
 }
@@ -152,7 +151,7 @@ body {
   margin: 0 4px;
 }
 .c-time {
-  font-size: 40px;
+  font-size: 2.5rem;
   letter-spacing: 1px;
 }
 
@@ -163,7 +162,7 @@ body {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 120px;
+  bottom: 10.5vh;
   display: flex;
   gap: 22px;
 }
@@ -180,13 +179,13 @@ body {
   filter: drop-shadow(0 8px 18px rgba(0, 0, 0, 0.25));
 }
 .box .label {
-  font-size: 24px;
+  font-size: 2rem;
   font-weight: 800;
   letter-spacing: 1px;
   margin-bottom: 8px;
 }
 .box .time {
-  font-size: 46px;
+  font-size: 3rem;
   font-weight: 800;
   letter-spacing: 1px;
 }
@@ -202,8 +201,8 @@ body {
    RUNNING TEXT (Marquee)
 =================================*/
 .rt {
-  width: 100%;
-  height: 80px;
+  width: 100vw;
+  height: 6vh;
   background: #04101c;
   position: fixed;
   bottom: 0;
