--- a/app/src/main/assets/assets/style.css
+++ b/app/src/main/assets/assets/style.css
@@ -52,8 +52,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 32px;
+  padding: 0 2%;
   color: #fff;
+  z-index: 9;
 }
 
 /* Tanggal (Masehi + Hijri) */
@@ -62,8 +63,9 @@ body {
   flex-direction: column;
   line-height: 5vh;
   font-weight: 600;
-  font-size: 1.5vw;
-  letter-spacing: 0.5px;
+  font-size: 1.2vw;
+  letter-spacing: 0.1vw;
+  text-transform: uppercase;
 }
 .tgl .hijri {
   font-weight: 400;
@@ -73,9 +75,11 @@ body {
 
 /* Logo & Nama Masjid */
 .brand {
+  touch-action: manipulation; /* mencegah double tap zoom dan scroll delay */
+  -ms-touch-action: manipulation;
   display: flex;
   align-items: center;
-  gap: 22px;
+  gap: 1vw;
 }
 .brand img {
   width: 7vw;
@@ -88,21 +92,21 @@ body {
 .brand .title .name {
   font-size: 4vw;
   font-weight: 800;
-  letter-spacing: 1px;
+  letter-spacing: 0.1vw;
 }
 .brand .title .addr {
   font-size: 1.5vw;
   font-weight: 400;
   opacity: 0.95;
   margin-top: 2%;
-  letter-spacing: 1px;
+  letter-spacing: 0.1vw;
 }
 
 /* Jam Digital */
 .clock {
   font-weight: 800;
   font-size: 6vw;
-  letter-spacing: 1px;
+  letter-spacing: 0.1vw;
   text-align: right;
 }
 
@@ -111,30 +115,30 @@ body {
 =================================*/
 .countdown {
   position: absolute;
-  top: 63%;
+  top: 60%;
   left: 1%;
-  width: 28.5%;
+  width: 36%;
   height: 10%;
-  background: url(../assets/gambar/Rectangle_countdownpng.png) center/contain
+  background: url(../assets/gambar/Rectangle_countdownpng.png) center / contain
     no-repeat;
   display: flex;
   align-items: center;
-  gap: 18px;
-  padding: 0 26px;
+  gap: 1vw;
+  padding: 0 1.2%;
   color: #fff;
   font-weight: 800;
-  font-size: 36px;
+  font-size: 2.5vw;
 }
 
 /* Icon countdown */
 .c-icon {
   width: 50%;
   height: 50%;
-  border-radius: 999px;
+  border-radius: 100%;
   background: #fff;
   display: grid;
   place-items: center;
-  flex: 0 0 52px;
+  flex: 0 0 8%;
 }
 .c-icon svg {
   width: 50%;
@@ -144,15 +148,15 @@ body {
 }
 
 .c-label {
-  letter-spacing: 1px;
+  letter-spacing: 0.1vw;
 }
 .c-sep {
   opacity: 0.9;
-  margin: 0 4px;
+  margin: 0 2%;
 }
 .c-time {
-  font-size: 2.5rem;
-  letter-spacing: 1px;
+  font-size: 2.5vw;
+  letter-spacing: 0.1vw;
 }
 
 /* ===============================
@@ -164,37 +168,44 @@ body {
   transform: translateX(-50%);
   bottom: 10.5vh;
   display: flex;
-  gap: 22px;
+  gap: 1%;
 }
 .box {
-  width: 250px;
-  height: 150px;
-  background: url("../assets/gambar/Rectangle_jam.png") center/cover no-repeat;
+  width: 14vw;
+  height: 17vh;
+  background: url(../assets/gambar/Rectangle_jam.png) center / cover no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: var(--blue);
   text-align: center;
-  filter: drop-shadow(0 8px 18px rgba(0, 0, 0, 0.25));
-}
-.box .label {
-  font-size: 2rem;
-  font-weight: 800;
-  letter-spacing: 1px;
-  margin-bottom: 8px;
-}
-.box .time {
-  font-size: 3rem;
-  font-weight: 800;
-  letter-spacing: 1px;
+  border-radius: 10%;
+  filter: drop-shadow(0 1vw 1vw rgba(0, 0, 0, 0.25));
+  -webkit-filter: drop-shadow(0 1vw 1vw rgba(0, 0, 0, 0.25));
 }
 
 /* Highlight box aktif (waktu sholat sekarang) */
 .box.active {
   background: var(--blue);
   color: #fff;
-  border-radius: 20px;
+  border-radius: 10%;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  -o-border-radius: 10%;
+}
+
+.box .label {
+  font-size: 2vw;
+  font-weight: 600;
+  letter-spacing: 0.1vw;
+  margin-bottom: 1%;
+}
+.box .time {
+  font-size: 3vw;
+  font-weight: 800;
+  letter-spacing: 0.1vw;
 }
 
 /* ===============================
@@ -212,26 +223,36 @@ body {
   overflow: hidden;
   z-index: 9999;
 }
+
 .marquee {
   display: flex;
-  white-space: nowrap;
-  animation: scroll-left 20s linear infinite;
-}
-.marquee span {
-  font-size: 2.5rem;
-  font-weight: 400;
-  color: #ffffff;
-  padding-right: 100px; /* jarak antar teks */
+  width: max-content;
+  animation: scroll 20s linear infinite;
+  -webkit-animation: scroll 20s linear infinite;
 }
 
-/* Animasi jalan ke kiri */
-@keyframes scroll-left {
-  from {
+.marquee span {
+  width: 100vw;
+  font-size: 2vw;
+  font-weight: 400;
+  color: #ffffff;
+  padding-right: 6%;
+}
+
+/* Animasi scroll seamless */
+@keyframes scroll {
+  0% {
     transform: translateX(0);
   }
-  to {
+  100% {
     transform: translateX(-50%);
   }
+}
+
+.rt,
+.marquee,
+.marquee span {
+  outline: none;
 }
 
 /* ===============================
@@ -357,11 +378,15 @@ body {
   align-items: center;
   justify-content: center;
   z-index: 9999;
+  pointer-events: none;
 }
 #adzan-popup.hidden {
   display: none;
 }
 
+#adzan-popup * {
+  pointer-events: auto; /* tapi anak-anak popup tetap bisa diinteraksi */
+}
 /* Slideshow wrapper */
 .slideshow-wrapper {
   position: absolute;
@@ -396,7 +421,7 @@ body {
 
 /* Konten popup */
 .popup-content {
-  width: 48.8%;
+  width: 56%;
   position: relative;
   z-index: 2;
   text-align: center;
@@ -438,25 +463,25 @@ body {
   background-color: #e57b1c;
   height: 11vh;
   font-weight: 600;
-  font-size: 5rem;
+  font-size: 5vw;
   color: #ffffff;
   animation: slideDown 0.8s ease both;
   animation-delay: 0.2s;
-  border-radius: 23px;
+  border-radius: 1vw;
   justify-content: center;
   align-items: center;
   gap: 4%;
 }
 
 .c-iconpopup svg {
-  width: 65px;
-  height: 65px;
+  width: 5vw;
   fill: #ffffff;
-  margin-top: 30px;
+  margin-top: 3.5vh;
 }
 
 #c-timepopup {
-  font-size: 5rem;
+  width: 18vw;
+  font-size: 5vw;
 }
 
 .adzan-video {
@@ -467,4 +492,180 @@ body {
   height: 100%;
   object-fit: cover;
   z-index: 20; /* pastikan lebih tinggi daripada slideshow */
+}
+
+/* Overlay */
+.settings-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgb(0 0 0 / 45%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  backdrop-filter: blur(6px);
+}
+
+/* Modal */
+.settings-modal {
+  background: #06101c;
+  color: #fff;
+  padding: 2rem;
+  border-radius: 1rem;
+  width: 100%;
+  max-width: 50vw;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.settings-modal h2 {
+  text-align: center;
+  margin-bottom: 2vh;
+}
+
+/* Baris setting */
+.setting-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.setting-row label {
+  flex: 1;
+  font-size: 1rem;
+}
+
+/* ===== Toggle Button Modern ===== */
+/* Toggle Modern 3D/Timblul */
+.toggle-btn {
+  position: relative;
+  display: inline-block;
+  width: 3.75em;
+  height: 2.125em;
+  background-color: #ccc;
+  border-radius: 2.125em;
+  cursor: pointer;
+  border: unset;
+  /*Shadowmembuatefektimbul*/
+  box-shadow: inset 0 -0.15em 0.25em rgba(0, 0, 0, 0.25),
+    /* bayangan bawah */ inset 0 0.1em 0.15em rgba(255, 255, 255, 0.6);
+  /*highlightatas*/
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  -webkit-transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  -moz-transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  -ms-transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  -o-transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Bulatan */
+.toggle-btn::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0.125em;
+  width: 1.875em;
+  height: 1.875em;
+  background-color: #fff;
+  border-radius: 50%;
+
+  /* Shadow untuk kesan timbul */
+  box-shadow: 0 0.15em 0.25em rgba(0, 0, 0, 0.4),
+    0 -0.05em 0.05em rgba(255, 255, 255, 0.5);
+  transform: translateY(-50%);
+  transition: left 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Toggle aktif */
+.toggle-btn.active {
+  background-color: #4ade80;
+  box-shadow: inset 0 -0.15em 0.25em rgba(0, 0, 0, 0.3),
+    inset 0 0.1em 0.15em rgba(255, 255, 255, 0.5);
+}
+
+.toggle-btn.active::before {
+  left: calc(100% - 1.875em - 0.125em);
+  box-shadow: 0 0.15em 0.25em rgba(0, 0, 0, 0.45),
+    0 -0.05em 0.05em rgba(255, 255, 255, 0.55);
+}
+
+/* Hove*
+
+/* Input number */
+.setting-row input[type="number"] {
+  width: 6rem;
+  padding: 0.3rem;
+  border-radius: 0.5rem;
+  border: none;
+  text-align: center;
+}
+
+/* Tombol simpan/keluar */
+.btn-row {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.btn {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  transition: 0.2s;
+}
+
+.btn.primary {
+  background: #4caf50;
+  color: #fff;
+}
+
+.btn.primary:hover {
+  background: #45a049;
+}
+
+.btn.secondary {
+  background: #555;
+  color: #fff;
+}
+
+.btn.secondary:hover {
+  background: #444;
+}
+
+/* Hidden */
+.hidden {
+  display: none;
+}
+
+#pre-adzan-time {
+  margin-bottom: 6vh;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.toast {
+  position: fixed;
+  bottom: -80px; /* awalnya tersembunyi */
+  left: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #fff;
+  background-color: #28a745; /* hijau default */
+  transition: bottom 0.5s ease;
+  z-index: 99999; /* pastikan di atas popup */
+}
+.toast.show {
+  bottom: 0;
 }
