--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,13 @@
         android:layout_height="match_parent"
         android:scrollbars="none" />
 
+        
+    <ImageView
+        android:id="@+id/cursorOverlay"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_cursor"
+        android:visibility="visible"
+        android:elevation="10dp"/>
+
 </RelativeLayout>
