--- a/app/src/main/res/layout/dialog_download.xml
+++ b/app/src/main/res/layout/dialog_download.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="30dp"
-    android:background="@android:color/white"
+    android:background="#CC000000"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center">
